Actions
Bug #14068
closedscadm: cast between incompatible function types
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Bite-size
Tags:
Gerrit CR:
Description
Build errors on SPARC:
common/modem_setup.c: In function 'ADM_Process_modem_setup': common/modem_setup.c:99:6: error: cast between incompatible function types from 'void (*)()' to 'void * (*)(void *)' [-Werror=cast-function-type] 99 | (void * (*)(void *))ADM_Modem_Listen, (void *)NULL) != 0) { | ^ cc1: all warnings being treated as errors *** Error code 1 dmake: Fatal error: Command failed for target `modem_setup.o' Current working directory /code/illumos-gate/usr/src/cmd/scadm/sparc/mpxu
Fix function signature.
Testing done: build/install/boot.
Updated by Electric Monk 8 months ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit d14c75765f135e18be90138d0a8aed8c3f7395bf
commit d14c75765f135e18be90138d0a8aed8c3f7395bf Author: Toomas Soome <tsoome@me.com> Date: 2021-09-17T16:04:03.000Z 14068 scadm: cast between incompatible function types Reviewed by: Robert Mustacchi <rm+illumos@gmail.com> Approved by: Dan McDonald <danmcd@joyent.com>
Actions