14068 scadm: cast between incompatible function types Reviewed by: Robert Mustacchi <rm+illumos@gmail.com> Approved by: Dan McDonald <danmcd@joyent.com>